--- a/index.html
+++ b/index.html
@@ -7,6 +7,46 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- Header -->
+    <header></header>
+
+    <!-- Slider -->
+    <section class="slider"></section>
+
+    <!-- About Us -->
+    <section class="about"></section>
+
+    <!-- Features -->
+    <section class="features"></section>
+
+    <!-- Services -->
+    <section class="services"></section>
+
+    <!-- Gallery -->
+    <section class="gallery"></section>
+
+    <!-- Slients -->
+    <section class="clients"></section>
+
+    <!-- Progress -->
+    <section class="progress"></section>
+
+    <!-- Testimonials -->
+    <section class="testimonials"></section>
+
+    <!-- Blog -->
+    <section class="blog"></section>
+
+    <!-- Research -->
+    <section class="research"></section>
+
+    <!-- Footer -->
+    <footer>
+        <!-- Contact Us -->
+        <section class="contact"></section>
+
+        <!-- Copyright -->
+        <section class="copyright"></section>
+    </footer>
 </body>
 </html>
