--- a/index.html
+++ b/index.html
@@ -5,48 +5,66 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- BS4 CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" 
+    integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;700&display=swap" rel="stylesheet">
+    <!-- Main CSS -->
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <!-- Header -->
+    <!-- Header: Dev_Quốc Kỳ -->
     <header></header>
 
-    <!-- Slider -->
+    <!-- Slider: Dev_Quốc Kỳ -->
     <section class="slider"></section>
 
-    <!-- About Us -->
+    <!-- About Us: Dev_Quốc Kỳ -->
     <section class="about"></section>
 
-    <!-- Features -->
+    <!-- Features: Dev_Quốc Kỳ -->
     <section class="features"></section>
 
-    <!-- Services -->
+    <!-- Services: Dev_Quốc Kỳ -->
     <section class="services"></section>
 
-    <!-- Gallery -->
+    <!-- Gallery: Dev_Quốc Kỳ -->
     <section class="gallery"></section>
 
-    <!-- Slients -->
+    <!-- Slients: Dev_Quốc Kỳ -->
     <section class="clients"></section>
 
-    <!-- Progress -->
+    <!-- Progress: Dev_Văn Dũng -->
     <section class="progress"></section>
 
-    <!-- Testimonials -->
+    <!-- Testimonials: Dev_Văn Dũng -->
     <section class="testimonials"></section>
 
-    <!-- Blog -->
+    <!-- Blog: Dev_Văn Dũng -->
     <section class="blog"></section>
 
-    <!-- Research -->
+    <!-- Research: Dev_Văn Dũng -->
     <section class="research"></section>
 
-    <!-- Footer -->
+    <!-- Footer: Dev_Văn Dũng -->
     <footer>
-        <!-- Contact Us -->
+        <!-- Contact Us: Dev_Văn Dũng -->
         <section class="contact"></section>
 
-        <!-- Copyright -->
+        <!-- Copyright: Dev_Văn Dũng -->
         <section class="copyright"></section>
     </footer>
+
+    <!-- Javascript -->
+    <!-- JQUERY -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+    <!-- BS4 JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" 
+    crossorigin="anonymous"></script>
 </body>
 </html>
