--- a/index.html
+++ b/index.html
@@ -22,45 +22,47 @@
 </head>
 <body>
     <!-- Header: Dev_Quốc Kỳ -->
-    <header></header>
+    <header class="corpHeader container">
 
-    <!-- Slider: Dev_Quốc Kỳ -->
-    <section class="slider"></section>
+    </header>
+
+    <!-- Slider: Dev_Văn Dũng -->
+    <section class="corpCarousel"></section>
 
     <!-- About Us: Dev_Quốc Kỳ -->
-    <section class="about"></section>
+    <section class="corpAbout"></section>
 
     <!-- Features: Dev_Quốc Kỳ -->
-    <section class="features"></section>
+    <section class="corpFeatures"></section>
 
     <!-- Services: Dev_Quốc Kỳ -->
-    <section class="services"></section>
+    <section class="corpServices"></section>
 
-    <!-- Gallery: Dev_Quốc Kỳ -->
-    <section class="gallery"></section>
+    <!-- Gallery: Dev_Văn Dũng -->
+    <section class="corpGallery"></section>
 
-    <!-- Slients: Dev_Quốc Kỳ -->
-    <section class="clients"></section>
+    <!-- Slients: Dev_Văn Dũng -->
+    <section class="corpClients"></section>
 
-    <!-- Progress: Dev_Văn Dũng -->
-    <section class="progress"></section>
+    <!-- Progress: Dev_Quốc Kỳ -->
+    <section class="corpProgress"></section>
 
-    <!-- Testimonials: Dev_Văn Dũng -->
-    <section class="testimonials"></section>
+    <!-- Testimonials: Dev_Quốc Kỳ -->
+    <section class="corpTestimonials"></section>
 
     <!-- Blog: Dev_Văn Dũng -->
-    <section class="blog"></section>
+    <section class="corpBlog"></section>
 
     <!-- Research: Dev_Văn Dũng -->
-    <section class="research"></section>
+    <section class="corpResearch"></section>
 
     <!-- Footer: Dev_Văn Dũng -->
     <footer>
         <!-- Contact Us: Dev_Văn Dũng -->
-        <section class="contact"></section>
+        <section class="corpContact"></section>
 
         <!-- Copyright: Dev_Văn Dũng -->
-        <section class="copyright"></section>
+        <section class="corpCopyright"></section>
     </footer>
     <!-- Back to top: Dev_Văn Dũng -->
 
