--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;600;700&display=swap" rel="stylesheet">
     <!-- CDN Animate.CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <!-- Font Awesome -->
@@ -20,10 +20,64 @@
     <!-- Main CSS -->
     <link rel="stylesheet" href="./css/style.css">
 </head>
-<body>
+<body id="myBody">
     <!-- Header: Dev_Quốc Kỳ -->
-    <header class="corpHeader container">
+    <header id="corpHeader" class="corpHeader">
+      <div class="corpHeader__wrap container">
+        <nav class="navbar navbar-expand-lg navbar-light">
+          <div class="corpHeader__brand">
+            <a class="navbar-brand" href="#">
+                <span>
+                    <i class="fa fa-align-right"></i>
+                    Corp Vision
+                </span>
+                <span>Vision to your Future</span>
+            </a>
+          </div>
 
+          <button class="navbar-toggler" type="button" data-toggle="collapse" 
+          data-target="#corpNavbar" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        
+          <div class="collapse navbar-collapse" id="corpNavbar">
+            <ul class="navbar-nav mx-lg-auto">
+              <li class="nav-item active">
+                <a class="nav-link corpHeader__link" href="#">Home <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link corpHeader__link" href="#">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link corpHeader__link" href="#">Services</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link corpHeader__link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+                  Pages
+                </a>
+                <div class="dropdown-menu corpHeader__dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="#">Blog posts</a>
+                  <a class="dropdown-item" href="#">404 page</a>
+                  <a class="dropdown-item" href="#">langding page</a>
+                  <a class="dropdown-item" href="#">elements page</a>
+                </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link corpHeader__link" href="#">Contact</a>
+              </li>
+            </ul>
+            <div class="corpHeader__search">
+              <i class="fa fa-search"></i>  
+            </div>
+            <div class="corpHeader__theme">
+              <button id="switchButton" title="Click to switch theme">
+                <i class="far fa-moon"></i>
+                <i class="far fa-sun"></i>
+              </button>
+            </div>
+          </div>
+        </nav>
+      </div>
     </header>
 
     <!-- Slider: Dev_Văn Dũng -->
@@ -67,6 +121,19 @@
     <!-- Back to top: Dev_Văn Dũng -->
 
     <!-- Javascript -->
+    <script>
+      window.onscroll = function() {scrollFunction()};
+  
+      function scrollFunction() {
+      if (document.body.scrollTop > 80 || document.documentElement.scrollTop > 80) {
+          document.getElementById("corpHeader").style.height = "80px";
+          document.getElementById("corpHeader").style.backgroundColor = "currentColor";
+      } else {
+          document.getElementById("corpHeader").style.height = "100px";
+          document.getElementById("corpHeader").style.backgroundColor = "transparent";
+          }
+      }
+  </script>
     <!-- JQUERY -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
@@ -74,5 +141,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" 
     crossorigin="anonymous"></script>
+
+    <!-- Xử lý light theme, dark theme -->
+    <script>
+      document.getElementById("switchButton").onclick = function () {
+        document.getElementById("myBody").classList.toggle("dark");
+      };
+    </script>
 </body>
 </html>
