them carousel chua xong

--- a/index.html
+++ b/index.html
@@ -88,7 +88,27 @@
     </header>
 
     <!-- Slider: Dev_Văn Dũng -->
-    <section class="corpCarousel"></section>
+    <section class="corpCarousel">
+
+      <div class="corpCarousel__content">
+        <div class="corpCarousel-wraper">
+          <div class="corpCarousel-slide">
+           <div class="corpCarousel__img">
+             <img src="./image/Carousel/b1.jpg" alt="">
+               <div class="corpCarousel__content">
+                 <h1> We will solve your issues our vision to your future</h1>
+                 <p>Lorem ipsum dolor sit amet, elit, sed do eiusmod ut labore et
+                   dolore magna aliqua. Ut enim ad minim veniam, quis nisi ut ea. </p>
+                   <div class="corpCarousel__btn">
+                      <a href="#" class="btn btn-primary"></a>
+                   </div>
+               </div>
+               <div class="corpCarousel__overlay"></div>
+           </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- About Us: Dev_Quốc Kỳ -->
     <section class="corpAbout">
