--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <button class="corpHeader__toggler navbar-toggler" onclick="clickButton()" type="button" data-toggle="collapse" 
           data-target="#corpNavbar" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <label for="corpHeader__checked" class="corpHeader__mobile-btn">
-              <i id="iconBars" class="corpHeader__toggler-icon fa fa-bars"></i>
+              <i onclick="changeBgColor()" id="iconBars" class="corpHeader__toggler-icon fa fa-bars"></i>
               <i id="iconClose" class="corpHeader__toggler-icon fas fa-times"></i>
             </label>
           </button>
@@ -779,6 +779,7 @@
         }
       }
     </script>
+
     <!-- JQUERY -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
