--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
             </a>
           </div>
           <input type="checkbox" hidden style="cursor: pointer;" class="corpHeader__input" id="corpHeader__checked">
-          <button class="corpHeader__toggler navbar-toggler" onclick="clickButton()" type="button" data-toggle="collapse" 
+          <button onclick="changeBgColor()" class="corpHeader__toggler navbar-toggler" type="button" data-toggle="collapse" 
           data-target="#corpNavbar" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <label for="corpHeader__checked" class="corpHeader__mobile-btn">
-              <i onclick="changeBgColor()" id="iconBars" class="corpHeader__toggler-icon fa fa-bars"></i>
+              <i id="iconBars" class="corpHeader__toggler-icon fa fa-bars"></i>
               <i id="iconClose" class="corpHeader__toggler-icon fas fa-times"></i>
             </label>
           </button>
@@ -751,34 +751,7 @@
       <i class="fa fa-angle-up"></i>
     </a>
     <!-- Javascript -->
-    <!-- Thay đổi background-color khi scroll -->
-    <script>
-      window.onscroll = function() {scrollFunction()};
-  
-      function scrollFunction() {
-        var x = document.getElementsByClassName("corpHeader__color");
-        var i;  
-      if (document.body.scrollTop > 80 || document.documentElement.scrollTop > 80) {
-          document.getElementById("corpHeader").style.padding = "5px 0px";
-          document.getElementById("corpHeader").style.borderBottom = "transparent";
-          document.getElementById("corpHeader").style.boxShadow = "0 3px 6px 0 rgb(0 0 0 / 5%)";
-          document.getElementById("corpHeader").style.backgroundColor = "currentColor";
-          document.getElementById("corpNavbar__home").style.color = "#009f4d";
-          for (i = 0; i < x.length; i++) {
-            x[i].style.color = "#3f3a64";
-          }
-        } else {
-          document.getElementById("corpHeader").style.padding = "15px 0px";
-          document.getElementById("corpHeader").style.borderBottom = "1px solid rgba(231, 231, 231, 0.18)";
-          document.getElementById("corpHeader").style.boxShadow = "0 0 0 0px #fff";
-          document.getElementById("corpHeader").style.backgroundColor = "transparent";
-          document.getElementById("corpNavbar__home").style.color = "#fff";
-          for (i = 0; i < x.length; i++) {
-            x[i].style.color = "#fff";
-          }
-        }
-      }
-    </script>
+    <script src="./Js/main.js"></script>
 
     <!-- JQUERY -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
