done carousel gallery footer

--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@
             <div class="footer__subscribe">
               <div class="title">
                 <h3>Let’s find out how to work together</h3>
-                <p>Lorem ipsum dolor sit amet elit. Velit beatae rem ullam dolore nisi esse quasi, sit amet. <br> Lorem ipsum dolor sit amet elit.  </p>
+                <p>Lorem ipsum dolor sit amet elit. Velit beatae rem ullam dolore nisi esse quasi, sit amet.  Lorem ipsum dolor sit amet elit.  </p>
               </div>
               <form class="footer__input">
                 <div class="fa fa-paper-plane"></div>
@@ -738,8 +738,8 @@
           <!-- Copyright: Dev_Văn Dũng -->
           <div class="corpCopyright">
             <div class="container">
-              <span>© 2021 Corp Vision All Rights Reserved</span>
-              <span>WordPress Theme by <a href="#">W3Layouts.</a></span>
+              <p>© 2021 Corp Vision All Rights Reserved | WordPress Theme by <a href="#">W3Layouts.</a></p>
+              
 
             </div>
           </div>
