Done Carousel footer gallery

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                    <p  class="animate__animated animate__fadeInDown">Lorem ipsum dolor sit amet, elit, sed do eiusmod ut labore et
                      dolore magna aliqua. Ut enim ad minim veniam, quis nisi ut ea. </p>
                      <div class="corpCarousel__btn animate__animated animate__fadeInDown">
-                        <a href="#" class="btn">Learn More</a>
+                        <a href="#" class="btn">Get Started</a>
                      </div>
                  </div>
               
@@ -166,7 +166,7 @@
                    <p class="animate__animated animate__fadeInDown">Lorem ipsum dolor sit amet, elit, sed do eiusmod ut labore et
                      dolore magna aliqua. Ut enim ad minim veniam, quis nisi ut ea. </p>
                      <div class="corpCarousel__btn animate__animated animate__fadeInUp">
-                        <a href="#" class="btn">Learn More</a>
+                        <a href="#" class="btn">Contact Now/a>
                      </div>
                  </div>
               
