--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                 <img src="./image/Service/service2.jpg" alt="" class="corpServices__img img-fluid">
               </a>
               <div class="corpServices__info">
-                <a href="#" class="corpServices__link btn__link">Work Expertise</a>
+                <a href="#" class="corpServices__link btn__link">Product Development</a>
                 <p>Venenatis eros et, sed commodo risus. Nullam sit amet laoreet elit..</p>
               </div>
               <a href="#" class="corpServices__btn btn__link mt-3">Learn More</a>
@@ -343,7 +343,7 @@
                 <img src="./image/Service/service3.jpg" alt="" class="corpServices__img img-fluid">
               </a>
               <div class="corpServices__info">
-                <a href="#" class="corpServices__link btn__link">Work Expertise</a>
+                <a href="#" class="corpServices__link btn__link">Software Development</a>
                 <p>Venenatis eros et, sed commodo risus. Nullam sit amet laoreet elit..</p>
               </div>
               <a href="#" class="corpServices__btn btn__link mt-3">Learn More</a>
@@ -354,8 +354,8 @@
     </section>
 
     <!-- Gallery: Dev_Văn Dũng -->
-    <section id="success" class="success">
-      <div class="container">
+    <section id="success" class="success py-5">
+      <div class="container py-lg-5 py-md-4 py-2">
           <div class="title">
               <h3>OUR GALLERY</h3>
               <h2>Successful projects we've done</h2>
@@ -599,11 +599,11 @@
     <section class="corpBlog"></section>
 
     <!-- news: Dev_Văn Dũng -->
-    <section class="news">
-      <div class="container">
+    <section class="news py-5">
+      <div class="container py-lg-5 py-md-4 py-2">
           <div class="title">
-              <h3>LATEST NEWS</h3>
-              <h2>Our insight and articles</h2>
+              <h3 class="mb-1">LATEST NEWS</h3>
+              <h2 class="mb-sm-5 mb-4"">Our insight and articles</h2>
           </div>
           <div class="row news__wrap">
               <div class="col-lg-4 col-md-6 news__item">
@@ -615,10 +615,14 @@
                       <h2><a href="#">Hello world!</a></h2>
                       <div class="news__footer">
                           <a href="#">
-                              <img src="./image/News/328cc1f23e4a3b73aa60ee6ced1897a1.jpeg" alt="">
-                              <span>by</span>
-                              W3Layouts
+                            <img src="./image/News/328cc1f23e4a3b73aa60ee6ced1897a1.jpeg" alt="">
                           </a>
+                          <div class="news__footer-wrap">
+                            <span>by</span>
+                            <a href="#">
+                              W3Layouts
+                            </a>    
+                          </div>
                           <p>April 1, 2021</p>
                       </div>
                   </div>
@@ -632,10 +636,14 @@
                       <h2><a href="#">Companies in NY launched a joint project on a three-tower hall</a></h2>
                       <div class="news__footer">
                           <a href="#">
-                              <img src="./image/News/328cc1f23e4a3b73aa60ee6ced1897a1.jpeg" alt="">
-                              <span>by</span>
-                              W3Layouts
+                            <img src="./image/News/328cc1f23e4a3b73aa60ee6ced1897a1.jpeg" alt="">
                           </a>
+                          <div class="news__footer-wrap">
+                            <span>by</span>
+                            <a href="#">
+                              W3Layouts
+                            </a>    
+                          </div>
                           <p>April 1, 2021</p>
                       </div>
                   </div>
@@ -649,10 +657,14 @@
                       <h2><a href="#">Design breakthrough upgrades the product and ready to launch</a></h2>
                       <div class="news__footer">
                           <a href="#">
-                              <img src="./image/News/328cc1f23e4a3b73aa60ee6ced1897a1.jpeg" alt="">
-                              <span>by</span>
-                              W3Layouts
+                            <img src="./image/News/328cc1f23e4a3b73aa60ee6ced1897a1.jpeg" alt="">
                           </a>
+                          <div class="news__footer-wrap">
+                            <span>by</span>
+                            <a href="#">
+                              W3Layouts
+                            </a>    
+                          </div>
                           <p>April 1, 2021</p>
                       </div>
                   </div>
@@ -664,12 +676,12 @@
     <!-- Footer: Dev_Văn Dũng -->
     <footer>
       
-        <div class="footer__container">
-          <div class="container">
+        <div class="footer__container py-5">
+          <div class="container py-md-5 py-sm-4 py-2">
             <div class="footer__subscribe">
               <div class="title">
                 <h3>Let’s find out how to work together</h3>
-                <p>Lorem ipsum dolor sit amet elit. Velit beatae rem ullam dolore nisi esse quasi, sit amet.  Lorem ipsum dolor sit amet elit.  </p>
+                <p class="mt-3">Lorem ipsum dolor sit amet elit. Velit beatae rem ullam dolore nisi esse quasi, sit amet.  Lorem ipsum dolor sit amet elit.  </p>
               </div>
               <form class="footer__input">
                 <div class="fa fa-paper-plane"></div>
@@ -684,8 +696,8 @@
 
         
           <!-- Contact Us: Dev_Văn Dũng -->
-          <div class="corpContact">
-            <div class="container">
+          <div class="corpContact py-5">
+            <div class="container py-md-4">
               <div class="row">
                 <div class="col-lg-4 col-md-6">
                     <div class="footer__logo">
